# advent

./: .gitignore  Cargo.toml  Makefile
2024/: Cargo.toml
advtools/: Cargo.toml
advtools/src/: grid.rs  input.rs  lib.rs
